<resources>
    <string name="app_name">nutrition</string>
    <string name="your_goal">Your Goal</string>
    <string name="welcome">Welcome !</string>
    <string name="extremely_active">Extremely Active</string>

    <string name="app_logo">App Logo</string>
    <string name="hello">Hello!</string>
    <string name="please_sign_up">Please sign up to continue</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or">or</string>
    <string name="signup_with">Signup with</string>
    <string name="signup">SIGNUP</string>
    <string name="already_member">"I'm already a member!"</string>    <!-- Icon content descriptions -->
    <string name="icon_user">User icon</string>
    <string name="icon_email">Email icon</string>
    <string name="icon_password">Password icon</string>
    <string name="icon_facebook">Facebook</string>
    <string name="icon_instagram">Instagram</string>
    <string name="icon_google">Google</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="medical_conditions">Medical Conditions:</string>
    <string name="heart_disease">Heart Disease</string>
    <string name="diabetes">Diabetes</string>
    <string name="hypertension">Hypertension</string>
    <string name="food_allergies">Food Allergies:</string>
    <string name="nuts">Nuts</string>
    <string name="dairy">Dairy</string>
    <string name="gluten">Gluten</string>
    <string name="dietary_preferences">Dietary Preferences:</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pescatarian">Pescatarian</string>
    <string name="omnivore">Omnivore</string>
    <string name="calculate_continue">Calculate &amp; Continue</string>
    <string name="nutrition_planner_logo">Nutrition Planner Logo</string>
    <string name="past_plans">Past Plans</string>
    <string name="please_sign_in">Please sign in to continue:</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="action_sign_in">Send</string>
    <string name="create_new_plan">Create New Plan\nStart a new plan to organize your tasks</string>
    <string name="view_history_plans">View History Plans\nCheck your saved plans and update them</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="maintain">Maintain</string>
    <string name="build_muscle">Build Muscle</string>
    <string name="your_activity_level">Your Activity Level:</string>
    <string name="sedentary">Sedentary</string>
    <string name="lightly_active">Lightly Active</string>
    <string name="moderately_active">Moderately Active</string>
    <string name="very_active">Very Active</string>
    <string name="back">Back</string>
    <string name="gender_question">what’s your Gender?</string>
    <string name="why_we_ask">why we ask</string>
    <string name="your_history_plans">Your History Plans:</string>
    <string name="history_list">List of past nutrition plans</string>
    <string name="next">NEXT</string>
    <string name="age_title">How old are you?</string>
    <string name="age_hint">e.g. 30</string>
    <string name="year_suffix">Year</string>
    <string name="diet_title">Your Dietary Preferences</string>
    <string name="get_plan">Get your plan</string>
    <string name="allergies_title">Your Food Allergies</string>
    <string name="cond_heart">Heart Disease</string>
    <string name="cond_diabetes">Diabetes</string>
    <string name="cond_hypertension">Hypertension</string>
    <string name="allergy_nuts">Nuts</string>
    <string name="allergy_dairy">Dairy</string>
    <string name="allergy_gluten">Gluten</string>
    <string name="why_activity_level">Why we ask</string>
    <string name="signup_prompt">Please sign up to continue:</string>
    <string name="hint_full_name">Full Name</string>
    <string name="tall_title">How tall are you?</string>

    <string name="hint_height">e.g. 1.75</string>
    <string name="meter_suffix">m</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
</resources>